welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:3: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:5: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:7: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:9: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:11: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:13: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:15: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:17: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:19: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^Balin:21: error: value prendBiscuit is not a member of Unit
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
                                ^