welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();
while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();

while(!estSurBiscuit){recule();}prendBiscuit();porteBiscuit();while(!estSurBiscuit){avance();};recule();poseBiscuit();


